# medi_system

./: .env  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/middleware/: logging_middleware.py
app/api/routes/: health.py  prescriptions.py  review.py
app/core/: normalisation.py  pipeline.py  preprocessing.py
app/models/: database.py  schemas.py
app/services/: cloud_fallback_service.py  doctor_matcher.py  embedding_service.py  medicine_matcher.py  vlm_service.py
app/utils/: confidence.py
db/seed/: seed_doctors.py  seed_medicines.py
scratch/: check_dim.py
scripts/: init_db.py
tests/: test_normalisation.py
